<?xml version="1.0"?>
<package format="2">
  <name>joystick</name>
  <version>0.1.0</version>
  <description>The joystick package</description>

  <maintainer email="sleepyserver6@gmail.com">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="sleepyserver6@gmail.com">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
</package>
